--- a/depictions/index.html
+++ b/depictions/index.html
@@ -9,10 +9,13 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
 	<style>
+		h1, .package-desc {
+			margin-left: 7px;
+		}
 		.badge-label {
 			border-radius:1em;
 		}
-		.panel {
+		.panel, .list-group-item {
 		 	border-radius: 0 !important;
 		}
 		.subshots {
@@ -20,6 +23,12 @@
 		}
 		.subshots:nth-child(1) {
 			margin-bottom: 10px;
+		}
+		.package-buttons {
+			margin-top: 10px;
+		}
+		a:link, a:visited, a:hover {
+			text-decoration: none;
 		}
 	</style>
 </head>
@@ -36,7 +45,7 @@
 		</div>
 
 		<div class="row panel panel-default">
-		  <div class="panel-heading">Changelog <div class="label label-primary badge-label">1.0 (latest)</div></div>
+		  <div class="panel-heading">Changelog <div class="label label-primary badge-label">v1.0 (latest)</div></div>
 		  <div class="panel-body">
 		    <li>Added people</li>
 		    <li>Added things</li>
@@ -53,6 +62,13 @@
 			<div class="subshots col-xs-12">
 				<img class="img-responsive col-xs-6" src="http://moreinfo.thebigboss.org/moreinfo/instamute3.jpg">
 			</div>
+		</div>
+
+		<div class="row package-buttons">
+			<ul class="list-group">
+			  <a href="screenshots"><li class="list-group-item">Screenshots</li></a>
+			  <a href="changelog"><li class="list-group-item">Full Changelog</li></a>
+			</ul>
 		</div>
 
 	</div>
