--- a/depictions/index.html
+++ b/depictions/index.html
@@ -9,6 +9,9 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
 	<style>
+		body {
+			background-color: azure;
+		}
 		h1, .package-desc {
 			margin-left: 7px;
 		}
@@ -35,9 +38,10 @@
 <body>
 	<div class="container">
 		<div class="package row">
-			<div class="header panel">
+			<div class="header">
 				<h1 class="package-name">InstaMute</h1>
 			</div>
+		<hr>
 		</div>
 		
 		<div class="package-info row">
