--- a/depictions/index.html
+++ b/depictions/index.html
@@ -21,6 +21,12 @@
 		.panel, .list-group-item {
 		 	border-radius: 0 !important;
 		}
+		.list-group-item:last-child {
+			margin-bottom: -1px;
+		}
+		.list-group {
+			margin-bottom: 0px;
+		}
 		.subshots {
 			text-align: center;
 		}
@@ -45,14 +51,14 @@
 		</div>
 		
 		<div class="package-info row">
-			<p class="package-desc">This is a package description.</p>
+			<p class="package-desc">Allows you to mute the more annoying users from your main Instagram feed.</p>
 		</div>
 
 		<div class="row panel panel-default">
-		  <div class="panel-heading">Changelog <div class="label label-primary badge-label">v1.0 (latest)</div></div>
+		  <div class="panel-heading">Changelog <div class="label label-primary badge-label">v1.0.1 (latest)</div></div>
 		  <div class="panel-body">
-		    <li>Added people</li>
-		    <li>Added things</li>
+		    <li>Added whitelist and blacklist modes</li>
+		    <li>Added ability to mute all, and selectively unmute users</li>
 		  </div>
 		</div>
 
@@ -72,6 +78,14 @@
 			<ul class="list-group">
 			  <a href="screenshots"><li class="list-group-item">Screenshots</li></a>
 			  <a href="changelog"><li class="list-group-item">Full Changelog</li></a>
+			  <a href="https://twitter.com/itsjake88"><li class="list-group-item">Follow Dev on Twitter</li></a>
+			</ul>
+		</div>
+
+		<div class="row repo-buttons">
+			<ul class="list-group">
+			  <a href="https://github.com/Jake0oo0/boomerang"><li class="list-group-item">Boomerang Repository</li></a>
+			  <a href="https://twitter.com/itsjake88"><li class="list-group-item">Follow Boomerang Dev</li></a>
 			</ul>
 		</div>
 
