--- a/depictions/index.html
+++ b/depictions/index.html
@@ -33,7 +33,7 @@
 		.subshots:nth-child(1) {
 			margin-bottom: 10px;
 		}
-		.package-buttons {
+		.package-buttons, .repo-buttons {
 			margin-top: 10px;
 		}
 		a:link, a:visited, a:hover {
