--- a/depictions/index.html
+++ b/depictions/index.html
@@ -33,8 +33,11 @@
 		.subshots:nth-child(1) {
 			margin-bottom: 10px;
 		}
-		.package-buttons, .repo-buttons {
+		.package-buttons {
 			margin-top: 10px;
+		}
+		.repo-buttons {
+			margin-top: 20px;
 		}
 		a:link, a:visited, a:hover {
 			text-decoration: none;
@@ -76,16 +79,16 @@
 
 		<div class="row package-buttons">
 			<ul class="list-group">
-			  <a href="screenshots"><li class="list-group-item">Screenshots</li></a>
-			  <a href="changelog"><li class="list-group-item">Full Changelog</li></a>
-			  <a href="https://twitter.com/itsjake88"><li class="list-group-item">Follow Dev on Twitter</li></a>
+			  <a href="screenshots"><li class="list-group-item"><span class="glyphicon glyphicon-picture"></span> Screenshots</li></a>
+			  <a href="changelog"><li class="list-group-item"><span class="glyphicon glyphicon-tasks"></span> Full Changelog</li></a>
+			  <a href="https://twitter.com/itsjake88"><li class="list-group-item"><span class="glyphicon glyphicon-heart"></span> Follow Dev on Twitter</li></a>
 			</ul>
 		</div>
 
 		<div class="row repo-buttons">
 			<ul class="list-group">
-			  <a href="https://github.com/Jake0oo0/boomerang"><li class="list-group-item">Boomerang Repository</li></a>
-			  <a href="https://twitter.com/itsjake88"><li class="list-group-item">Follow Boomerang Dev</li></a>
+			  <a href="https://github.com/Jake0oo0/boomerang"><li class="list-group-item"><span class="glyphicon glyphicon-wrench"></span> Boomerang Repository</li></a>
+			  <a href="https://twitter.com/itsjake88"><li class="list-group-item"><span class="glyphicon glyphicon-heart"></span> Follow Boomerang Dev</li></a>
 			</ul>
 		</div>
 
