--- a/depictions/screenshots/index.html
+++ b/depictions/screenshots/index.html
@@ -12,38 +12,20 @@
 		body {
 			background-color: azure;
 		}
-		h1, .package-desc {
+		h1 {
 			margin-left: 7px;
 		}
-		.badge-label {
-			border-radius:1em;
-		}
-		.panel, .list-group-item, .alert {
+		.panel, .alert {
 		 	border-radius: 0 !important;
 		}
-		.list-group-item:last-child {
-			margin-bottom: -1px;
-		}
-		.list-group {
-			margin-bottom: 0px;
+		.package-error {
+			display: none;
 		}
 		.subshots {
 			text-align: center;
 		}
 		.subshots:nth-child(1) {
 			margin-bottom: 10px;
-		}
-		.package-buttons {
-			margin-top: 10px;
-		}
-		.repo-buttons {
-			margin-top: 20px;
-		}
-		a:link, a:visited, a:hover {
-			text-decoration: none;
-		}
-		.package-error {
-			display: none;
 		}
 	</style>
 </head>
@@ -53,40 +35,13 @@
 			<div class="header">
 				<h1 class="package-name"></h1>
 			</div>
-		<hr>
+			<hr>
 		</div>
 
 		<div class="row alert alert-danger package-error"></div>
 		
-		<div class="package-info">
-			<div class="package-info row">
-				<p class="package-desc"></p>
-			</div>
-
-			<div class="row panel panel-default">
-			  <div class="panel-heading">Changelog <div class="label label-primary badge-label latest-version"></div></div>
-			  <div class="panel-body changelog-list">
-			  </div>
-			</div>
-
-			<br>
-
-			<div class="row screenshots">
-			</div>
-
-			<div class="row package-buttons">
-				<ul class="list-group">
-				  <a href="screenshots" class="screenshots-link"><li class="list-group-item"><span class="glyphicon glyphicon-picture"></span> Screenshots</li></a>
-				  <a href="changelog" class="changelog-link"><li class="list-group-item"><span class="glyphicon glyphicon-tasks"></span> Full Changelog</li></a>
-				</ul>
-			</div>
-
-			<div class="row repo-buttons">
-				<ul class="list-group">
-				  <a href="https://github.com/Jake0oo0/boomerang"><li class="list-group-item"><span class="glyphicon glyphicon-wrench"></span> Boomerang Repository</li></a>
-				  <a href="https://twitter.com/itsjake88"><li class="list-group-item"><span class="glyphicon glyphicon-heart"></span> Follow Boomerang Dev</li></a>
-				</ul>
-			</div>
+		<div class="package-info row screenshots">
+			<h2>Screenshots</h2>
 		</div>
 
 	</div>
@@ -97,22 +52,14 @@
 		if (!dPackage) {
 			$(".package-error").text("This package doesn't seem to exist!").css("display", "block");
 			$(".package-info").css("display", "none");
-			$(".package-name").text("Package not found");
+			$(".package-name").text("Not Found");
 			return;
 		}
 
-		$.getJSON("../packages/" + dPackage + ".json", function(data) {
+		$.getJSON("/packages/" + dPackage + ".json", function(data) {
 			document.title = data.name + " by " + data.author;
 		  $(".package-name").text(data.name);
-		  $(".package-desc").text(data.description);
-		  $(".latest-version").text(data.version + " (latest)");
-		  var cList = $(".changelog-list");
-		  var changes = data.changelog[data.version];
-		  for (var c in changes) {
-		  	var change = changes[c];
-		  	cList.append("<li>" + change + "</li>")
-		  }
-
+		  
 		  var count = 0;
 		  var screenshots = data.screenshots;
 		  var sKeys = Object.keys(screenshots);
@@ -127,17 +74,6 @@
 		  	count += 1;
 		  }
 
-		  $(".changelog-link").attr("href", "changelog?p=" + dPackage);
-		  $(".screenshots-link").attr("href", "screenshots?p=" + dPackage);
-
-		  var links = data.links;
-		  var lKeys = Object.keys(links);
-		  for (var l in lKeys) {
-		  	var link = lKeys[l];
-				var wrap = $("<a href=\"" + links[link] + "\"><li class=\"list-group-item\"></li></a>");
-				wrap.find(".list-group-item").append($.parseHTML(link));
-				$(".package-buttons").append(wrap);
-		  }
 		})
 		.fail(function() {
 			$(".package-error").text("An error occurred while retrieving package info!").css("display", "block");
