--- a/depictions/index.html
+++ b/depictions/index.html
@@ -10,7 +10,7 @@
 
 	<style>
 		body {
-			background-color: azure;
+			background-color: #efeff4;
 		}
 		h1, .package-desc {
 			margin-left: 7px;
