--- a/depictions/screenshots/index.html
+++ b/depictions/screenshots/index.html
@@ -72,8 +72,7 @@
 		  		$(".screenshots").append("<div class=\"subshots col-xs-12\"></div>");
 		  	}
 
-		  	$(".screenshots .subshots:last-child").append("<div class=\"col-xs-6\"></div>")
-		  	$(".screenshots .subshots:last-child .col-xs-6").append("<img class=\"img-responsive\" src=\"/images/" + screenshot + "\" title=\"" + screenshots[screenshot] + "\">");
+		  	$(".screenshots .subshots:last-child").append("<div class=\"col-xs-6\"><img class=\"img-responsive\" src=\"/images/" + screenshot + "\" title=\"" + screenshots[screenshot] + "\"></div>");
 		  	count += 1;
 		  }
 
